(Fix) Fix generate password button is not aligned in the add user modal

--- a/modules/theme/src/theme-core/definitions/apps/developer-portal.less
+++ b/modules/theme/src/theme-core/definitions/apps/developer-portal.less
@@ -1705,7 +1705,7 @@
     flex-direction: row;
     flex-wrap: nowrap;
     align-content: center;
-    align-items: flex-start;
+    align-items: center;
     gap: 10px;
 
     .full-width {
@@ -1713,7 +1713,7 @@
     }
 
     .ui.button {
-        margin-top: 23px;
+        margin-top: 7px;
     }
 }
 
@@ -1747,7 +1747,7 @@
 }
 
 /*-------------------------------------------
-            Organization Insights Graphs 
+            Organization Insights Graphs
 ---------------------------------------------*/
 .org-insights-container {
     margin-top: -2%;
@@ -1769,9 +1769,9 @@
 
 .org-insights-graph-tooltip {
     background-color: #3d3d3d;
-    color: white; 
-    width: 170%; 
-    padding: 20% 0% 20% 20%; 
+    color: white;
+    width: 170%;
+    padding: 20% 0% 20% 20%;
     border-radius: 10px;
 }
 
@@ -1793,23 +1793,23 @@
 }
 
 .org-insights-tooltip-date {
-    margin: 0; 
+    margin: 0;
     margin-left: 5%;
 }
 
 .org-insights-last-fetched-warning {
     display: flex;
     flex-direction: row;
-    justify-content: flex-end; 
-    margin-top: 4%; 
+    justify-content: flex-end;
+    margin-top: 4%;
     margin-right: 0.1%;
 }
 
 .org-insights-duration-notice-container {
-    display: flex; 
-    flex-direction: row; 
+    display: flex;
+    flex-direction: row;
     padding: 1% 0 0.5% 0;
-    margin: 1% 0%; 
+    margin: 1% 0%;
     background: transparent;
     align-items: center;
     height: '7vh'
@@ -1838,12 +1838,12 @@
 
 .org-insights-filter-container-advanced-filtering-enabled {
     background-color: white;
-    padding: 0.1%;      
+    padding: 0.1%;
     border-radius: 8px;
     display: flex;
     justify-content: flex-end;
     flex-direction: row;
-    align-items: center;  
+    align-items: center;
 }
 
 .org-insights-filter-container > .oxygen-text-field {
@@ -1851,7 +1851,7 @@
 }
 
 .org-insights-advanced-filter-trigger {
-    cursor: pointer; 
+    cursor: pointer;
     pointer-events: auto;
     border-radius: 8px;
     margin-left: 24px;
@@ -1865,7 +1865,7 @@
 }
 
 .org-insights-advanced-filter-clear-button {
-    margin-left: 1%; 
+    margin-left: 1%;
     margin-top: 0;
     cursor: pointer;
     text-decoration: underline;
@@ -1876,8 +1876,8 @@
     margin-right: 2px;
     box-shadow: none;
     border-radius: 8px;
-    
-    .MuiOutlinedInput-notchedOutline { 
+
+    .MuiOutlinedInput-notchedOutline {
         border: 0 !important;
     }
 
@@ -1891,8 +1891,8 @@
 }
 
 .org-insights-advanced-filter-container {
-    padding: 4%; 
-    width: 400px; 
+    padding: 4%;
+    width: 400px;
     z-index: 1000;
 }
 
@@ -1905,9 +1905,9 @@
 }
 
 .org-insights-tab-view {
-    background-color: rgb(249,248,247) !important; 
-    box-shadow: 0 0 !important; 
-    padding: 0 !important; 
+    background-color: rgb(249,248,247) !important;
+    box-shadow: 0 0 !important;
+    padding: 0 !important;
     border: 0 !important;
 }
 
